--- a/game.html
+++ b/game.html
@@ -31,21 +31,21 @@
             </div>
         </div>
         <h1 id="question">What is the answer to this question</h1>
-        <div class="choice-container">
-            <p class="choice-prefix">A</p>
-            <p class="choice-text" data-number="1">Choice 1</p>
+        <div class="answer-container">
+            <p class="answer-prefix">A</p>
+            <p class="answer-text" data-number="1">Answer 1</p>
         </div>
-        <div class="choice-container">
-            <p class="choice-prefix">B</p>
-            <p class="choice-text" data-number="2">Choice 2</p>
+        <div class="answer-container">
+            <p class="answer-prefix">B</p>
+            <p class="answer-text" data-number="2">Answer 2</p>
         </div>
-        <div class="choice-container">
-            <p class="choice-prefix">C</p>
-            <p class="choice-text" data-number="3">Choice 3</p>
+        <div class="answer-container">
+            <p class="answer-prefix">C</p>
+            <p class="answer-text" data-number="3">Answer 3</p>
         </div>
-        <div class="choice-container">
-            <p class="choice-prefix">D</p>
-            <p class="choice-text" data-number="4">Choice 4</p>
+        <div class="answer-container">
+            <p class="answer-prefix">D</p>
+            <p class="answer-text" data-number="4">Answer 4</p>
         </div>
     </div>
 </div>
